refactor: apply OpenRewrite refactoring across project